# ece368

ece368-proj1/: proj1  savemain.txt  sorting.c  sq1.txt  sq2.txt  test
ece368-proj2/: CMakeLists.txt  haha.txt  haha.txt.huff  huff  huff.c  proj2instruction.txt  proj2instruction.txt.huff  temp.txt  test1.txt  test1.txt.huff  unhuff  unhuff.c
proj2submit/: huff  huff.c  unhuff  unhuff.c
proj3/: adjacent  gmon.out  map6.txt  shortestpathslow  sqrt  sqrt.c
proj3/prevous file/: adjacent2.c  adjacent3.c  adjacent4.c  adjacentsuccess.c
